# HDF5Manager

./: .gitignore  LICENSE  Project.toml  README.md
.github/workflows/: julia-tests.yml  python-package.yml  python-tests.yml  roundtrip-tests.yml
python/: pyproject.toml
python/HDF5Manager/: core.py
python/hdf5manager/: __init__.py  core.py
python/hdfmanager/: __init__.py
python/tests/: test_python.py  test_roundtrip.py
src/: HDF5Manager.jl
test/: runtests.jl  test_integration.py
