[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hdf5manager"
version = "0.1.0"
description = "Bidirectional HDF5 serialization for Julia and Python with full type preservation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "arko17"}]
dependencies = [
    "h5py",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["hdf5manager*"]
