[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hdfmanager"
version = "0.1.0"
description = "Bidirectional HDF5 serialization for Julia and Python with full type preservation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "arko17"}]
dependencies = [
    "h5py",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["hdfmanager*"]
